--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,15 @@ main {
   align-items: center;
 }
 
+.right-area {
+  position: fixed;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  z-index: 100;
+  padding-right: 6.5%;
+}
+
 .card {
   padding: 2em;
 }
-
-
