--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,15 @@ main {
 
 .right-area {
   position: fixed;
-  top: 38%;
+  top: 51%;
   right: 0;
   transform: translateY(-50%);
   z-index: 100;
-  padding-right: 5%;
+  padding-right: 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2em; 
 }
 
 .card {
