--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,23 @@ main {
   right: 0;
   transform: translateY(-50%);
   z-index: 100;
-  padding-right: 2%;
+  padding-right: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2em; 
+  gap: 2em;
+}
+
+.left-area {
+  position: fixed;
+  top: 45%;
+  left: 0;
+  transform: translateY(-50%);
+  z-index: 100;
+  padding-left: 3.3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .card {
