--- a/src/Components/Instructions.css
+++ b/src/Components/Instructions.css
@@ -3,7 +3,7 @@
     border: 2px solid #333;
     padding: 1.4em;
     border-radius: 10px;
-    min-width: 220px;
+    width: 320px;
     margin-bottom: 2em;
     text-align: left;
 }
@@ -22,4 +22,22 @@
 .instructions-box li {
     margin-bottom: 0.6em;
     color: #000000;
+}
+
+.lang-switch {
+  position: absolute;
+  top: 23px;
+  right: 12px;
+  background: none;
+  border: none;
+  color: #333;
+  font-size: 0.95em;
+  cursor: pointer;
+  padding: 2px 8px;
+  border-radius: 5px;
+  transition: background 0.5s;
+}
+
+.lang-switch:hover {
+  background: #adaaaa;
 }
