--- a/src/Components/ControlPanel.css
+++ b/src/Components/ControlPanel.css
@@ -8,6 +8,7 @@
 
 .control-panel h2 {
     margin-top: 0;
+    margin-bottom: 0;
     font-size: 1.3em;
     color: #000000;
 }
@@ -30,4 +31,35 @@
 .control-panel button:active {
     background-color: #ffffff;
     color: rgb(0, 0, 0);
+}
+
+.actions {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    gap: 0.5em;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 0.5em;
+}
+
+
+.control-panel select {
+    margin-right: 6.5em;
+    font-size: 1em;
+    padding: 0.2em 0.3em;
+    border-radius: 5px;
+    border: 1px solid #333;
+    cursor: pointer;
+    background-color: #000000;
+}
+
+.control-panel select:hover {
+    background-color: #555;
+    color: #ffffff;
 }
