Añade un la instrucción en la caja de instruciones para el select y corrige estilos para el mismo

--- a/src/Components/Instructions.css
+++ b/src/Components/Instructions.css
@@ -4,6 +4,7 @@
     padding: 1.4em;
     border-radius: 10px;
     width: 320px;
+    height: 310px;
     margin-bottom: 2em;
     text-align: left;
 }
