--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ main {
 }
 
 .right-area {
-  position: fixed;
+  position: absolute;
   top: 54%;
   right: 0;
   transform: translateY(-50%);
@@ -32,7 +32,7 @@ main {
 }
 
 .left-area {
-  position: fixed;
+  position: absolute;
   top: 49%;
   left: 0;
   transform: translateY(-50%);
