--- a/src/Components/ChessBoard.css
+++ b/src/Components/ChessBoard.css
@@ -12,15 +12,32 @@
 }
 
 .chessboard-cell {
+  display: flex;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  justify-content: center;
+  font-size: 2em;
+  align-items: center;
+  cursor: pointer;
+  user-select: none;
+  transition: all 0.15s ease-in-out;
+}
+
+.chessboard-cell:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 6px rgb(0, 191, 255);
+  z-index: 1;
 }
 
 .chessboard-cell.white {
-  background: #ffffff;
+  background: beige;
 }
 
 .chessboard-cell.black {
-  background: #000000;
+  background: rgb(0, 0, 0);
+}
+
+.chessboard-cell.select {
+  outline: 3px solid blue;
 }
