--- a/src/Components/ControlPanel.css
+++ b/src/Components/ControlPanel.css
@@ -53,7 +53,7 @@
 
 
 .control-panel select {
-    margin-right: 6.5em;
+    margin-right: 4.6em;
     font-size: 1em;
     padding: 0.2em 0.3em;
     border-radius: 5px;
@@ -62,6 +62,15 @@
     background-color: #000000;
     color: white    ;
 }
+
+.selects {
+  display: flex;
+  margin-right: 0em;
+  flex-direction: column;
+  align-items: center; 
+  gap: 0.5em;
+}
+
 
 .control-panel select:hover {
     background-color: #555;
