--- a/src/Components/ChessBoard.css
+++ b/src/Components/ChessBoard.css
@@ -17,7 +17,6 @@
   height: 100%;
   box-sizing: border-box;
   justify-content: center;
-  font-size: 2em;
   align-items: center;
   cursor: pointer;
   user-select: none;
@@ -43,13 +42,13 @@
 }
 
 .chessboard-cell.visited {
-  /* visited cells become green */
   background: #4caf50 !important;
+  border: 1px solid black;
   color: white;
 }
 
 .chessboard-cell.backtracked {
-  /* backtracked cells become red */
   background: #e53935 !important;
+  border: 1px solid black;
   color: white;
 }
