--- a/src/Components/ControlPanel.css
+++ b/src/Components/ControlPanel.css
@@ -20,19 +20,21 @@
   border: none;
   border-radius: 10px;
   transition: 0.25s;
-  background-color: #000000;
+  background: linear-gradient(135deg, #000000, #383838);
   color: #ffffff;
   cursor: pointer;
 }
 
 .control-panel button:hover {
-  background-color: #555;
+  background: linear-gradient(135deg, #1a1a1a, #7a7a7a);
   transform: scale(1.2);
   box-shadow: 0 0 12px #313439;
 }
 
 .control-panel button:active {
   background-color: #ffffff;
+  background: linear-gradient(135deg, #000000, #222222);
+  transform: scale(1);
   color: rgb(0, 0, 0);
 }
 
